--- a/.classpath
+++ b/.classpath
@@ -17,5 +17,6 @@
 	<classpathentry kind="lib" path="C:/Users/Christopher/Desktop/eclipse/plugins/org.eclipse.core.databinding_1.5.0.v20150422-0725.jar" sourcepath="C:/Users/Christopher/Desktop/eclipse/plugins/org.eclipse.core.databinding_1.5.0.v20150422-0725.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Christopher/Desktop/eclipse/plugins/org.eclipse.core.databinding.observable_1.5.0.v20150422-0725.jar" sourcepath="C:/Users/Christopher/Desktop/eclipse/plugins/org.eclipse.core.databinding.observable_1.5.0.v20150422-0725.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Christopher/Desktop/eclipse/plugins/org.eclipse.jface.databinding_1.7.0.v20150406-2148.jar" sourcepath="C:/Users/Christopher/Desktop/eclipse/plugins/org.eclipse.jface.databinding_1.7.0.v20150406-2148.jar"/>
+	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
